# greek-double-accents

./: README.md  pyproject.toml
greek_double_accents/: constants.py  double_accents.py  main.py  utils.py
greek_double_accents/etc/: make_neuter.py  neuters.txt
tests/: make_test.py  test_corpus.py  test_double_accents.py  test_make_test.py  test_split.py  test_utils.py
tests/fixtures/: book2.txt  book_fix.txt  corpus_educational_clean.txt  corpus_educational_wrong.txt  hnc_golden_corpus_clean.txt  hnc_golden_corpus_wrong.txt
