[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "greek-double-accents"
version = "1.0.0"
readme = "README.md"
dependencies = [
    "spacy",
    # For downloading the spacy model...
    "pip",
    "grac @ git+https://github.com/daxida/grac.git#egg=grac&subdirectory=py-grac",
]

[project.optional-dependencies]
etc = [
    "pytest",
    "ruff",
]

[project.scripts]
gda = "greek_double_accents.main:main"

[tool.setuptools]
packages = ["greek_double_accents"]
include-package-data = true

[tool.setuptools.package-data]
"greek_double_accents" = ["etc/*"]

[tool.ruff]
line-length = 100
output-format = "concise"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint]
preview = true
select = [
    "E",    # pycodestyle error
    "W",    # pycodestyle warning
    "I",    # isort
    "N",    # pep8-naming
    "F",    # Pyflakes rules
    "C",    # flake8-complexity
    "PTH",  # Paths
    "ANN",  # Annotations
]
ignore = [
    "ANN401",
]

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
